--- a/FIBO/package.json
+++ b/FIBO/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "influxdb-nodejs": "^3.1.0",
+    "moment": "^2.24.0",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
