--- a/FIBO/package.json
+++ b/FIBO/package.json
@@ -12,6 +12,7 @@
   "author": "William Simoni",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
