--- a/FIBO/package.json
+++ b/FIBO/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
