--- a/FIBO/package.json
+++ b/FIBO/package.json
@@ -12,17 +12,22 @@
   "author": "William Simoni",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "extends-classes": "^1.0.5",
     "influxdb-nodejs": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "pg": "^8.0.2",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "jest": "^25.1.0",
-    "supertest": "^4.0.2",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.3",
+    "supertest": "^4.0.2"
   }
 }
