--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "client",
+  "name": "wizard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
     "json-to-pretty-yaml": "^1.2.2",
     "primeicons": "^2.0.0",
     "primereact": "^4.0.0",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
-    "react-simple-sidenav": "^1.0.1",
     "react-transition-group": "^4.3.0",
     "yaml": "^1.7.2"
   },
