--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "wizard",
+  "name": "client",
+  "productName": "Wizard Yaml Configurator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
+  "main": "src/main.js",
   "dependencies": {
     "classnames": "^2.2.6",
     "json-to-pretty-yaml": "^1.2.2",
     "primeicons": "^2.0.0",
     "primereact": "^4.0.0",
     "react": "^16.13.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "react-transition-group": "^4.3.0",
     "yaml": "^1.7.2"
@@ -17,7 +20,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "electron-dev": "set ELECTRON_START_URL=http://localhost:3000 && electron .",
+    "package-win": "electron-packager . wizard --overwrite --asar=true --platform=win32 --arch=ia32 --icon=build/favicon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Wizard Yaml Configurator\"",
+    "package-linux": "electron-packager . wizard --overwrite --asar=true --platform=linux --arch=x64 --icon=build/logo512.png --prune=true --out=release-builds",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^8.2.2",
+    "electron-packager": "^14.2.1"
   }
 }
