--- a/FIBO/package.json
+++ b/FIBO/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "compression": "^1.7.4",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "extends-classes": "^1.0.5",
+    "helmet": "^3.22.0",
     "influxdb-nodejs": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
