--- a/DATABASE SCRIPT/package.json
+++ b/DATABASE SCRIPT/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "btoa": "^1.2.1",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0",
     "pg": "^8.0.2",
     "uuid": "^7.0.3"
   }
