--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "William Simoni",
   "license": "MIT",
   "dependencies": {
-    "btoa": "^1.2.1",
     "bcrypt": "^4.0.1",
+    "bluebird": "^3.7.2",
+    "btoa": "^1.2.1",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -27,6 +29,9 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "pg": "^8.0.2",
+    "redis": "^3.0.2",
+    "socket.io": "^2.3.0",
+    "socket.io-redis": "^5.2.0",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
