--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "bluebird": "^3.7.2",
     "btoa": "^1.2.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -24,12 +23,13 @@
     "extends-classes": "^1.0.5",
     "helmet": "^3.22.0",
     "influxdb-nodejs": "^3.1.0",
+    "ioredis": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
     "mathjs": "^6.6.4",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "pg": "^8.0.2",
-    "redis": "^3.0.2",
+    "poolifier": "^1.0.0",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.2.0",
     "uuid": "^7.0.3"
